# recomplog

./: .gitignore  AGENTS.md  CODING_PRACTICES.md  Cargo.toml  PKGBUILD  PKGBUILD.reference  README.md  clippy.toml  prompt.md  rustfmt.toml
data/infoods/: README.md  infoods_components.json
docs/: CLI-surface-implementation-plan.md  cli.md  legacy-parity.md
migrations/: 001_initial_unified_schema.sql  002_set_cardio_json.sql  003_nutrition_units.sql  004_split_micro_macro_nutrients.sql  007_infoods_and_micro_unique.sql  008_body_multi_sample_per_day.sql  009_product_merge_alias.sql  010_event_soft_delete_and_audit.sql  011_event_supersedes.sql  012_set_order_revisions.sql  013_append_only_triggers.sql
reports/: 2026-07-10-legacy-parity-gaps.md
scripts/: import_infoods.py
src/: append_guard.rs  bodyweight.rs  cli.rs  commands.rs  completion.rs  config.rs  db.rs  entity_audit.rs  error.rs  hr_zones.rs  infoods.rs  load_type.rs  macro_names.rs  main.rs  nutrition_units.rs  phase.rs  product_resolve.rs  sanity.rs  set_order.rs  stats.rs  track_metrics.rs  utils.rs
src/commands/: audit.rs  backup.rs  body.rs  check.rs  config_cmd.rs  import.rs  mod.rs  nutrition.rs  (+4 more)
tests/: audit.rs  backup.rs  body_measurement.rs  check_append.rs  check_missing.rs  check_workout.rs  completion.rs  config_completion.rs  event_vs_storage.rs  import_fit.rs  import_legacy.rs  nutrition_full.rs  nutrition_micronutrient.rs  nutrition_product.rs  report_brief.rs  report_html.rs  report_nutrition.rs  set_order.rs  soft_delete.rs  supersede.rs  workout.rs  workout_sets.rs  workout_stats.rs
(+10 files in other folders)
