[package]
name = "recomplog"
version = "0.1.0"
edition = "2021"
description = "Unified local CLI for body recomposition tracking: workouts, body metrics, sleep, nutrition, and reports"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "cargo", "env", "string"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
comfy-table = "7.2"
directories = "6.0"
fitparser = "0.11"
hex = "0.4"
rusqlite = { version = "0.40", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strsim = "0.11"
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde_json = "1.0"
tempfile = "3.27"
